# investment_advisor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  COST_OPTIMIZATION.md  Dockerfile.streamlit  Makefile  README.md  README_STARTUP.md  README_v2.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  cleanup_unused_files.py  docker-compose.dev.yml  investment_advisor.py  main.py  pyproject.toml  quick_start.sh  refactoring_plan.md  requirements.txt  shared_config.py  start_all.sh  start_fastapi.sh  start_react.sh  start_streamlit.sh  todolist.md
.devcontainer/: devcontainer.json
backend/: .coveragerc  .env.example  API_AUTHENTICATION.md  DATABASE_MIGRATIONS.md  Dockerfile.dev  README.md  alembic.ini  main.py  pytest.ini  requirements.txt  run_tests.sh
backend/alembic/: env.py
backend/api/dependencies/: auth.py  database.py  use_cases.py
backend/core/: config.py  security.py
backend/infrastructure/: __init__.py
backend/scripts/: create_migration.sh  init_db.sh
backend/tests/: __init__.py  conftest.py  test_streamlit_adapter.py
database/: init.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
investment_advisor/: __init__.py
investment_advisor/agents/: __init__.py  base.py  company_analyst.py  industry_expert.py  macroeconomist.py  mediator.py  news_analyst.py  risk_manager.py  sentiment_analyst.py  technical_analyst.py
investment_advisor/analysis/: __init__.py  decision_system.py  fundamental.py
investment_advisor/core/: __init__.py  config.py  exceptions.py
investment_advisor/data/: __init__.py  base.py  economic_data.py  korea_stock.py  reliable_fetcher.py  simple_fetcher.py  stable_fetcher.py  us_stock.py  yahoo_fetcher.py  yahoo_finance_alternative.py
investment_advisor/ui/: __init__.py  card_layout.py  charts.py  clean_modern_ui.py  dashboard.py  layouts.py  metrics.py  minimal_layout.py  minimal_ui.py  modern_layout.py  modern_styles.py  styles.py  terminal_layout.py  terminal_styles.py  themes.py
investment_advisor/utils/: __init__.py  config.py  formatters.py  json_encoder.py  logging.py  logging_config.py  streamlit_context.py  validators.py
investment_advisor/visualization/: __init__.py
scripts/: quick_start.sh  run.sh  setup_uv.sh
tests/: check_real_data.py  test_app_data.py  test_final.py  test_fixes.py  test_real_data.py
(+57 files in other folders)
